--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/ico" href="img/favicon.ico">
-    <title>Kreatives</title>
+    <title>karen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 me-4 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#Home">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#Home">inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Services">Services</a>
+                        <a class="nav-link" href="#Services">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Features">Features</a>
+                        <a class="nav-link" href="#Features">caracteristicas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Portfolio">Portfolio</a>
+                        <a class="nav-link" href="#Portfolio">Precios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Pricing">Pricing</a>
+                        <a class="nav-link" href="#Pricing">contactos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Team">Team</a>
